# GD-Storage

./: LICENSE  README.md  cli.py  encoder.py  gd-storage.psd  gd_api.py  pyproject.toml  save_manager.py
methods/: __init__.py  compression.py  method1_xy.py  method2_raw_groups.py  method3_base10000.py  method4_base64_groups.py  method5_property31.py  method6_optimized.py
